--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
         "airbnb-base",
         "plugin:@typescript-eslint/recommended",
         "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "eslint-config-prettier/@typescript-eslint"
 
 
     ],
@@ -21,6 +23,17 @@
         "prettier"
     ],
     "rules": {
+
+      "@typescript-eslint/naming-convention": [
+        "error",
+        {
+          "selector": "interface",
+          "prefix": ["I"],
+          "format": ["PascalCase"]
+        }
+      ],
+
+
         "prettier/prettier": "error",
         "class-methods-use-this":"off",
         "camelcase": "off",
