--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,59 +1,51 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "airbnb-base",
-        "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended",
+  "env": {
+      "es2021": true,
+      "node": true
+  },
+  "extends": [
+      "plugin:prettier/recommended",
+      "airbnb-base",
+      "plugin:@typescript-eslint/recommended",
+      "prettier/@typescript-eslint"
 
 
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint",
-        "prettier"
-    ],
-    "rules": {
 
-      // "@typescript-eslint/naming-convention": [
-      //   "error",
-      //   {
-      //     "selector": "interface",
-      //     "prefix": ["I"],
-      //     "format": ["PascalCase"]
-      //   }
-      // ],
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+      "ecmaVersion": 12,
+      "sourceType": "module"
+  },
+  "plugins": [
+      "@typescript-eslint",
+      "prettier"
+  ],
+  "rules": {
 
-
-        "prettier/prettier": "error",
-        "class-methods-use-this":"off",
-        "camelcase": "off",
-        // "@typescript-eslint/camelcase": ["off"],
-        "@typescript-eslint/no-unused-vars":["error",{
-          "argsIgnorePatterns":"_"
-        }],
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-              "ts": "never"
-            }
-          ]
-    },
-    "settings": {
-      "import/resolver": {
-        "node": {
-          "paths": ["src"],
-          "extensions": [".js", ".jsx", ".ts", ".tsx"]
-        }
+     "no-useless-constructor":"off",
+      "prettier/prettier": "error",
+      "class-methods-use-this":"off",
+      "camelcase": "off",
+      // "@typescript-eslint/camelcase": ["off"],
+      "@typescript-eslint/no-unused-vars":["error",{
+        "argsIgnorePatterns":"_"
+      }],
+      "import/extensions": [
+          "error",
+          "ignorePackages",
+          {
+            "ts": "never"
+          }
+        ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     }
+  }
 
 }
