--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,13 @@
 {
   "env": {
       "es2021": true,
-      "node": true,
-      "jest":true
+      "node": true
   },
   "extends": [
-      "plugin:prettier/recommended",
       "airbnb-base",
       "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint"
-
+      "prettier/@typescript-eslint",
+      "plugin:prettier/recommended"
 
 
   ],
@@ -23,15 +21,19 @@
       "prettier"
   ],
   "rules": {
-
-     "no-useless-constructor":"off",
       "prettier/prettier": "error",
       "class-methods-use-this":"off",
       "camelcase": "off",
       // "@typescript-eslint/camelcase": ["off"],
-      "@typescript-eslint/no-unused-vars":["error",{
-        "argsIgnorePatterns":"_"
-      }],
+
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": [
+        "error"
+      ],
+
+      "no-useless-constructor": "off",
+      "@typescript-eslint/no-useless-constructor": ["error"],
+
       "import/extensions": [
           "error",
           "ignorePackages",
@@ -42,6 +44,7 @@
   },
   "settings": {
     "import/resolver": {
+      "typescript": {},
       "node": {
         "paths": ["src"],
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
