--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/jest": "^26.0.20",
     "@types/multer": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -42,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.29",
+    "uuid": "^8.3.2",
     "uuidv4": "^6.2.6"
   }
 }
