--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,16 @@
       "prettier"
   ],
   "rules": {
+
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "prefix": ["I"],
+        "format": ["PascalCase"]
+      }
+    ],
+
       "prettier/prettier": "error",
       "class-methods-use-this":"off",
       "camelcase": "off",
