--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,12 +6,12 @@
   "password": "docker",
   "database": "gostack_gobarber",
   "entities": [
-    "src/modules/**/infra/typeorm/entities/*.ts"
- ],
+    "./src/modules/**/infra/typeorm/entities/*.ts"
+  ],
   "migrations": [
     "./src/shared/infra/typeorm/migrations/*.ts"
   ],
-    "cli": {
-        "migrationsDir": "./src/shared/infra/typeorm/migrations/"
-    }
+  "cli": {
+    "migrationsDir": "./src/shared/infra/typeorm/migrations/"
+  }
 }
