--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/nodemailer": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
@@ -38,6 +39,7 @@
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
