--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "handlebars": "^4.7.6",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.4",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
