--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.6.6",
     "@types/nodemailer": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
