--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/ioredis": "^4.19.3",
     "@types/jest": "^26.0.20",
     "@types/multer": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
@@ -34,12 +35,14 @@
     "@types/nodemailer": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
+    "class-transformer": "^0.3.2",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.22.0",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.4",
