--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/ioredis": "^4.19.3",
     "@types/jest": "^26.0.20",
     "@types/multer": "^1.4.5",
+    "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.16.0",
@@ -49,6 +50,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.29",
